--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
   padding: 30px;
   border: 2px solid red;
+  background: linear-gradient(to right, rgb(225, 159, 224), #9a78e0);
 }
 
 main {
@@ -18,18 +19,20 @@ main {
   border: 1px solid black;
   margin-left: auto;
   margin-right: auto;
+  background-color: white;
 }
 
 section {
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
   padding: 10px;
   font-weight: bold;
+  border: 1px solid black;
 }
 section .titulo {
   font-size: 28px;
   margin-bottom: 6px;
+  color: white;
 }
 section p {
   font-size: 20px;
@@ -55,6 +58,7 @@ section p {
   height: 100%;
   width: 32%;
   border: 1px solid black;
+  background-color: rgba(93, 38, 202, 0.7215686275);
 }
 
 .skill-container {
@@ -68,9 +72,19 @@ section p {
   color: white;
 }
 
-.html {
+.Ingles {
   width: 90%;
-  background-color: red;
+  background-color: rgb(33, 0, 150);
+}
+
+.Castellano {
+  width: 100%;
+  background-color: rgb(33, 0, 150);
+}
+
+.Valenciano {
+  width: 70%;
+  background-color: rgb(33, 0, 150);
 }
 
 .column-right {
