--- a/styles.scss
+++ b/styles.scss
@@ -40,15 +40,18 @@ section{
         font-size:28px;
         margin-bottom: 6px;
         color:white;
+        height: 25%;
     }
 
     p{
-        font-size: 20px;
+        font-size: 22px;
+        word-spacing: 2px;
+        word-break:break-all;
     }
 }
 
 .foto{
-    height: 22%;
+    height: 300px;
     width: 100%;
     border-radius: 5px;
 }
@@ -104,7 +107,7 @@ $color-barra:rgb(33, 0, 150);
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border: $border;
+    width: 100%;
 
 }
 .cuerpo>p {
@@ -116,20 +119,37 @@ $color-barra:rgb(33, 0, 150);
 }
 
 .sub{
+    width: 100%;
     height: 230px;
-    border: $border;
+
     display: flex;
     flex-direction: row;
 
     .fecha{
         width: 60%;
-        padding: 13px;
-        border: $border2;
+        padding: 0px 10px 10px 15px;
+
 
         p{
-            padding-top: 5px;
+            margin-top: 40px;
+            padding-bottom: 20px;
             font-size: 20px;
+            height: 20px;
+        }
+    }
+    .descripción{
+        width: 400px;
+        padding: 13px;
+
+
+        p{
+            margin-top: 15px;
+            padding-top: 5px;
+            padding-right: 25px;
+            font-size: 18px;
             height: 50px;
+            width: 400px;
+            word-break:break-all;
         }
     }
 }
@@ -138,22 +158,35 @@ $color-barra:rgb(33, 0, 150);
     flex-direction: column;
     padding: 10px;
     width: 50px;
-    border: $border;
+
 
     .lineatiempo{
         width: 15px;
         height: 300px;
         background-color: blue;
         position: relative;
+        
+        .punto{
+            content: "";
+            display: block;
+            width: 27px;
+            height: 27px;
+            background-color: white;
+            position: absolute;
+            top:90px;
+            left: -7px;
+            border-radius: 50%;
+            border: 4px solid rgb(69, 3, 3);
+        }
 
         &::after{
             content: "";
             display: block;
-            width: 25px;
-            height: 25px;
+            width: 20px;
+            height: 20px;
             background-color: white;
             position: absolute;
-            top:10px;
+            top:20px;
             left: -7px;
             border-radius: 50%;
             border: 4px solid rgb(69, 3, 3);
@@ -161,11 +194,11 @@ $color-barra:rgb(33, 0, 150);
         &::before{
             content: "";
             display: block;
-            width: 25px;
-            height: 25px;
+            width: 20px;
+            height: 20px;
             background-color: white;
             position: absolute;
-            top:80px;
+            top:160px;
             left: -7px;
             border-radius: 50%;
             border: 4px solid rgb(69, 3, 3);
@@ -178,7 +211,7 @@ $color-barra:rgb(33, 0, 150);
     display: flex;
     flex-direction: column;
     padding: 10px;
-    border: $border;
+ 
 
     p {
         margin-left: 9px;
@@ -191,5 +224,11 @@ $color-barra:rgb(33, 0, 150);
     .iconos{
         display: flex;
         flex-direction: row;
+        @include centrado();
     }
+}
+.imagen{
+    height: 140px;
+    width: 140px;
+    margin:10px;
 }
