--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ section {
   flex-direction: column;
   padding: 10px;
   font-weight: bold;
-  border: 1px solid black;
+  border-bottom: rgb(5, 21, 129) 4px solid;
 }
 section .titulo {
   font-size: 28px;
@@ -38,12 +38,12 @@ section p {
   font-size: 22px;
   word-spacing: 2px;
   word-break: break-all;
+  height: auto;
 }
 
 .foto {
-  height: 300px;
+  height: 400px;
   width: 100%;
-  border-radius: 5px;
 }
 
 .container {
@@ -99,10 +99,12 @@ section p {
   margin-left: auto;
   margin-right: auto;
   height: 60%;
+  border: 1px solid black;
 }
 .encabezado p {
   font-size: 80px;
   text-align: center;
+  padding-bottom: 10%;
 }
 
 .cuerpo {
@@ -123,6 +125,7 @@ section p {
 .sub {
   width: 100%;
   height: 230px;
+  border: 1px solid black;
   display: flex;
   flex-direction: row;
 }
@@ -222,6 +225,36 @@ section p {
   height: 140px;
   width: 140px;
   margin: 10px;
+}
+
+.componente {
+  display: flex;
+  flex-direction: row;
+  height: 30%;
+  border: 1px solid black;
+  text-align: center;
+  position: relative;
+  padding: 10px;
+}
+
+.centro {
+  content: "a";
+  position: absolute;
+  left: 90px;
+  top: 10px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
+  border: 5px solid rgb(46, 7, 188);
+}
+.centro::after {
+  content: attr(data-description);
+  display: block;
+  position: relative;
+  background-color: white;
+  border: 4px solid rgb(69, 3, 3);
 }
 
 /*# sourceMappingURL=style.css.map */
