--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   width: 100%;
   height: 100%;
@@ -39,6 +38,10 @@ section p {
   word-spacing: 2px;
   word-break: break-all;
   height: auto;
+}
+
+#gmail {
+  font-size: 20px;
 }
 
 .foto {
@@ -92,6 +95,7 @@ section p {
   flex-direction: column;
   height: 100%;
   width: 68%;
+  margin-left: 10px;
 }
 
 .encabezado {
@@ -99,10 +103,9 @@ section p {
   margin-left: auto;
   margin-right: auto;
   height: 60%;
-  border: 1px solid black;
 }
 .encabezado p {
-  font-size: 80px;
+  font-size: 59px;
   text-align: center;
   padding-bottom: 10%;
 }
@@ -120,86 +123,6 @@ section p {
   font-size: 35px;
   font-weight: bold;
   height: 40px;
-}
-
-.sub {
-  width: 100%;
-  height: 230px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: row;
-}
-.sub .fecha {
-  width: 60%;
-  padding: 0px 10px 10px 15px;
-}
-.sub .fecha p {
-  margin-top: 40px;
-  padding-bottom: 20px;
-  font-size: 20px;
-  height: 20px;
-}
-.sub .descripción {
-  width: 400px;
-  padding: 13px;
-}
-.sub .descripción p {
-  margin-top: 15px;
-  padding-top: 5px;
-  padding-right: 25px;
-  font-size: 18px;
-  height: 50px;
-  width: 400px;
-  word-break: break-all;
-}
-
-.contenedor-lineatiempo {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  width: 50px;
-}
-.contenedor-lineatiempo .lineatiempo {
-  width: 15px;
-  height: 300px;
-  background-color: blue;
-  position: relative;
-}
-.contenedor-lineatiempo .lineatiempo .punto {
-  content: "";
-  display: block;
-  width: 27px;
-  height: 27px;
-  background-color: white;
-  position: absolute;
-  top: 90px;
-  left: -7px;
-  border-radius: 50%;
-  border: 4px solid rgb(69, 3, 3);
-}
-.contenedor-lineatiempo .lineatiempo::after {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: white;
-  position: absolute;
-  top: 20px;
-  left: -7px;
-  border-radius: 50%;
-  border: 4px solid rgb(69, 3, 3);
-}
-.contenedor-lineatiempo .lineatiempo::before {
-  content: "";
-  display: block;
-  width: 20px;
-  height: 20px;
-  background-color: white;
-  position: absolute;
-  top: 160px;
-  left: -7px;
-  border-radius: 50%;
-  border: 4px solid rgb(69, 3, 3);
 }
 
 .cierre {
@@ -230,8 +153,8 @@ section p {
 .componente {
   display: flex;
   flex-direction: row;
-  height: 30%;
-  border: 1px solid black;
+  height: 33.3%;
+  border-bottom: 0.2px solid rgba(43, 2, 176, 0.911);
   text-align: center;
   position: relative;
   padding: 10px;
@@ -240,8 +163,8 @@ section p {
 .centro {
   content: "a";
   position: absolute;
-  left: 90px;
-  top: 10px;
+  left: 200px;
+  top: 20px;
   display: block;
   width: 30px;
   height: 30px;
@@ -254,7 +177,47 @@ section p {
   display: block;
   position: relative;
   background-color: white;
-  border: 4px solid rgb(69, 3, 3);
+  left: 40px;
+  top: -22px;
+  width: 350px;
+  padding-right: 10px;
+  font-size: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+  text-align: left;
+}
+.centro::before {
+  content: attr(data-fecha);
+  display: block;
+  position: relative;
+  background-color: white;
+  right: 200px;
+  top: 0px;
+  width: 170px;
+  padding-right: 10px;
+}
+
+.componente:last-child {
+  border-bottom: 0px solid red;
+}
+
+.subs {
+  width: 100%;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.linea {
+  position: absolute;
+  left: 206.5px;
+  top: 14px;
+  display: block;
+  width: 20px;
+  height: 200px;
+  background-color: rgba(52, 20, 215, 0.529);
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
