--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,4 @@
-$border: 1px solid black;
+$border: 0.1px solid black;
 $border2: 2px solid red;
 
 @mixin centrado() {
@@ -55,6 +55,9 @@ section {
         height: auto;
     }
 }
+#gmail {
+    font-size:20px;
+}
 
 .foto {
     height: 400px;
@@ -105,16 +108,16 @@ $color-barra: rgb(33, 0, 150);
 
 .column-right {
     @include columna($width: 68%);
+    margin-left: 10px;
 }
 
 .encabezado {
     width: 80%;
     @include centrado();
     height: 60%;
-    border: $border;
 
     p {
-        font-size: 80px;
+        font-size: 59px;
         text-align: center;
         padding-bottom: 10%;
     }
@@ -136,97 +139,7 @@ $color-barra: rgb(33, 0, 150);
     height: 40px;
 }
 
-.sub {
-    width: 100%;
-    height: 230px;
-    border: $border;
-    display: flex;
-    flex-direction: row;
 
-    .fecha {
-        width: 60%;
-        padding: 0px 10px 10px 15px;
-
-
-        p {
-            margin-top: 40px;
-            padding-bottom: 20px;
-            font-size: 20px;
-            height: 20px;
-        }
-    }
-
-    .descripción {
-        width: 400px;
-        padding: 13px;
-
-
-        p {
-            margin-top: 15px;
-            padding-top: 5px;
-            padding-right: 25px;
-            font-size: 18px;
-            height: 50px;
-            width: 400px;
-            word-break: break-all;
-        }
-    }
-}
-
-.contenedor-lineatiempo {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    width: 50px;
-
-
-    .lineatiempo {
-        width: 15px;
-        height: 300px;
-        background-color: blue;
-        position: relative;
-
-        .punto {
-            content: "";
-            display: block;
-            width: 27px;
-            height: 27px;
-            background-color: white;
-            position: absolute;
-            top: 90px;
-            left: -7px;
-            border-radius: 50%;
-            border: 4px solid rgb(69, 3, 3);
-        }
-
-        &::after {
-            content: "";
-            display: block;
-            width: 20px;
-            height: 20px;
-            background-color: white;
-            position: absolute;
-            top: 20px;
-            left: -7px;
-            border-radius: 50%;
-            border: 4px solid rgb(69, 3, 3);
-        }
-
-        &::before {
-            content: "";
-            display: block;
-            width: 20px;
-            height: 20px;
-            background-color: white;
-            position: absolute;
-            top: 160px;
-            left: -7px;
-            border-radius: 50%;
-            border: 4px solid rgb(69, 3, 3);
-        }
-    }
-
-}
 
 .cierre {
     display: flex;
@@ -258,8 +171,9 @@ $color-barra: rgb(33, 0, 150);
 .componente {
     display: flex;
     flex-direction: row;
-    height: 30%;
-    border: $border;
+    height: 33.3%;
+    //border: $border;
+    border-bottom:0.2px solid rgba(43, 2, 176, 0.911);
     text-align: center;
     position: relative;
     padding:10px;
@@ -268,22 +182,66 @@ $color-barra: rgb(33, 0, 150);
 .centro {
     content: "a";
     position: absolute;
-    left: 90px;
-    top: 10px;
+    left: 200px;
+    top: 20px;
     display: block;
     width: 30px;
     height: 30px;
     background-color: white;
     border-radius: 50%;
     border: 5px solid rgb(46, 7, 188);
-
+    
+    
     &::after {
         content: attr(data-description);
         display: block;
         position: relative;
         background-color: white;
-
-
-        border: 4px solid rgb(69, 3, 3);
+        left: 40px;
+        top:-22px;
+        //border: 4px solid rgb(69, 3, 3);
+        width: 350px;
+        padding-right: 10px;
+        //word-break: break-all;
+        font-size: 20px;
+        margin-top: auto;
+        margin-bottom: auto;
+        text-align: left;
     }
+    &::before {
+        content: attr(data-fecha);
+        display: block;
+        position: relative;
+        background-color: white;
+        right: 200px;
+        top:0px;
+        //border: 4px solid rgb(69, 3, 3);
+        width: 170px;
+        padding-right: 10px;
+    }
+    
+}
+.componente:last-child {
+    border-bottom: 0px solid red;
+}
+
+.subs {
+    width: 100%;
+    height: 230px;
+    //border: $border;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    
+}
+
+.linea{
+    position: absolute;
+    left: 206.5px;
+    top: 14px;
+    display: block;
+    width: 20px;
+    height: 200px;
+    background-color: rgba(52, 20, 215, 0.529);
+    border-radius: 5px;
 }
